--- a/script/web_scrap_and_mapping.ipynb
+++ b/script/web_scrap_and_mapping.ipynb
@@ -27,7 +27,7 @@
     "scope = ['https://spreadsheets.google.com/feeds']#,'https://www.googleapis.com/auth/drive']\n",
     "\n",
     "# credential is anonymised for privacy\n",
-    "cred_path_and_file = '../../credential/nCoV mapping-59326d68d885.json'\n",
+    "cred_path_and_file = 'your_credential_please'\n",
     "\n",
     "creds = ServiceAccountCredentials.from_json_keyfile_name(cred_path_and_file,scope)\n",
     "client = gspread.authorize(creds)\n",
@@ -213,39 +213,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Applications/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: DeprecationWarning: Using Nominatim with the default \"geopy/1.21.0\" `user_agent` is strongly discouraged, as it violates Nominatim's ToS https://operations.osmfoundation.org/policies/nominatim/ and may possibly cause 403 and 429 HTTP errors. Please specify a custom `user_agent` with `Nominatim(user_agent=\"my-application\")` or by overriding the default `user_agent`: `geopy.geocoders.options.default_user_agent = \"my-application\"`. In geopy 2.0 this will become an exception.\n",
-      "  \n"
+      "finding geolocation of Hubei China\n",
+      "latitude and longitude for Hubei China is following\n",
+      "(31.15172525, 112.87832224656043)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Guangdong China\n",
+      "latitude and longitude for Guangdong China is following\n",
+      "(23.1357694, 113.1982688)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Zhejiang China\n",
+      "latitude and longitude for Zhejiang China is following\n",
+      "(29.0000001, 119.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Henan China\n",
+      "latitude and longitude for Henan China is following\n",
+      "(34.0000001, 113.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Hunan China\n",
+      "latitude and longitude for Hunan China is following\n",
+      "(27.9995878, 112.009538)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Jiangxi China\n",
+      "latitude and longitude for Jiangxi China is following\n",
+      "(28.0, 116.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Anhui China\n",
+      "latitude and longitude for Anhui China is following\n",
+      "(32.0, 117.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Chongqing China\n",
+      "latitude and longitude for Chongqing China is following\n",
+      "(30.05518, 107.8748712)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Jiangsu China\n",
+      "latitude and longitude for Jiangsu China is following\n",
+      "(33.0000001, 119.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Shandong China\n",
+      "latitude and longitude for Shandong China is following\n",
+      "(36.0000001, 118.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Sichuan China\n",
+      "latitude and longitude for Sichuan China is following\n",
+      "(30.5000001, 102.4999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Beijing China\n",
+      "latitude and longitude for Beijing China is following\n",
+      "(39.906217, 116.3912757)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Shanghai China\n",
+      "latitude and longitude for Shanghai China is following\n",
+      "(31.2322758, 121.4692071)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Heilongjiang China\n",
+      "latitude and longitude for Heilongjiang China is following\n",
+      "(48.0000047, 127.999992)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Fujian China\n",
+      "latitude and longitude for Fujian China is following\n",
+      "(26.5450001, 117.842778)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Shaanxi China\n",
+      "latitude and longitude for Shaanxi China is following\n",
+      "(36.0, 109.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Guangxi China\n",
+      "latitude and longitude for Guangxi China is following\n",
+      "(24.0, 109.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Hebei China\n",
+      "latitude and longitude for Hebei China is following\n",
+      "(39.0000001, 116.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Yunnan China\n",
+      "latitude and longitude for Yunnan China is following\n",
+      "(25.0, 102.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Hainan China\n",
+      "latitude and longitude for Hainan China is following\n",
+      "(19.2000001, 109.5999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Shanxi China\n",
+      "latitude and longitude for Shanxi China is following\n",
+      "(37.0, 112.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Liaoning China\n",
+      "latitude and longitude for Liaoning China is following\n",
+      "(40.9975197, 122.9955469)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Tianjin China\n",
+      "latitude and longitude for Tianjin China is following\n",
+      "(39.1235635, 117.1980785)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Guizhou China\n",
+      "latitude and longitude for Guizhou China is following\n",
+      "(27.0, 107.0)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Jilin China\n",
+      "latitude and longitude for Jilin China is following\n",
+      "(42.9995032, 125.9816054)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Gansu China\n",
+      "latitude and longitude for Gansu China is following\n",
+      "(38.0000001, 101.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Inner Mongolia China\n",
+      "latitude and longitude for Inner Mongolia China is following\n",
+      "(43.2443242, 114.3251664)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Japan\n",
+      "latitude and longitude for  Japan is following\n",
+      "(36.5748441, 139.2394179)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Ningxia China\n",
+      "latitude and longitude for Ningxia China is following\n",
+      "(37.0000001, 105.9999999)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Xinjiang China\n",
+      "latitude and longitude for Xinjiang China is following\n",
+      "(41.7574769, 87.16738423046897)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Singapore\n",
+      "latitude and longitude for  Singapore is following\n",
+      "(1.357107, 103.8194992)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Thailand\n",
+      "latitude and longitude for  Thailand is following\n",
+      "(14.8971921, 100.83273)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Hong Kong\n",
+      "latitude and longitude for  Hong Kong is following\n",
+      "(22.2793278, 114.1628131)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  South Korea\n",
+      "latitude and longitude for  South Korea is following\n",
+      "(36.5581914, 127.9408564)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Qinghai China\n",
+      "latitude and longitude for Qinghai China is following\n",
+      "(35.40709525, 95.95211573241954)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Taiwan\n",
+      "latitude and longitude for  Taiwan is following\n",
+      "(23.9739374, 120.9820179)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Germany\n",
+      "latitude and longitude for  Germany is following\n",
+      "(51.0834196, 10.4234469)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Malaysia\n",
+      "latitude and longitude for  Malaysia is following\n",
+      "(4.5693754, 102.2656823)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Macau\n",
+      "latitude and longitude for  Macau is following\n",
+      "(22.1757605, 113.5514142)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Vietnam\n",
+      "latitude and longitude for  Vietnam is following\n",
+      "(13.2904027, 108.4265113)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  France\n",
+      "latitude and longitude for  France is following\n",
+      "(46.603354, 1.8883335)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  United Arab Emirates\n",
+      "latitude and longitude for  United Arab Emirates is following\n",
+      "(24.0002488, 53.9994829)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of New South Wales Australia\n",
+      "latitude and longitude for New South Wales Australia is following\n",
+      "(-31.8759835, 147.2869493)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Queensland Australia\n",
+      "latitude and longitude for Queensland Australia is following\n",
+      "(-22.1646782, 144.5844903)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Victoria Australia\n",
+      "latitude and longitude for Victoria Australia is following\n",
+      "(-36.5986096, 144.6780052)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  India\n",
+      "latitude and longitude for  India is following\n",
+      "(22.3511148, 78.6677428)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of South Australia Australia\n",
+      "latitude and longitude for South Australia Australia is following\n",
+      "(-30.5343665, 135.6301212)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of British Columbia Canada\n",
+      "latitude and longitude for British Columbia Canada is following\n",
+      "(55.001251, -125.002441)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Toronto, ON Canada\n",
+      "latitude and longitude for Toronto, ON Canada is following\n",
+      "(43.653963, -79.387207)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Italy\n",
+      "latitude and longitude for  Italy is following\n",
+      "(42.6384261, 12.674297)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Philippines\n",
+      "latitude and longitude for  Philippines is following\n",
+      "(12.7503486, 122.7312101)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Russia\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(31.15172525, 112.87832224656043)\n",
-      "Confirmed\n",
-      "Country/Region\n",
-      "Deaths\n",
-      "Last Update\n",
-      "Province/State\n",
-      "Recovered\n"
+      "latitude and longitude for  Russia is following\n",
+      "(64.6863136, 97.7453061)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  UK\n",
+      "latitude and longitude for  UK is following\n",
+      "(54.7023545, -3.2765753)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Chicago, IL US\n",
+      "latitude and longitude for Chicago, IL US is following\n",
+      "(41.8755616, -87.6244212)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of San Benito, CA US\n",
+      "latitude and longitude for San Benito, CA US is following\n",
+      "(36.6248089, -121.1177379)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Santa Clara, CA US\n",
+      "latitude and longitude for Santa Clara, CA US is following\n",
+      "(37.2333253, -121.6846349)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Belgium\n",
+      "latitude and longitude for  Belgium is following\n",
+      "(50.6402809, 4.6667145)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Cambodia\n",
+      "latitude and longitude for  Cambodia is following\n",
+      "(13.5066394, 104.869423)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of London, ON Canada\n",
+      "latitude and longitude for London, ON Canada is following\n",
+      "(42.988576, -81.246643)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Finland\n",
+      "latitude and longitude for  Finland is following\n",
+      "(63.2467777, 25.9209164)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Tibet China\n",
+      "latitude and longitude for Tibet China is following\n",
+      "(31.894343149999997, 87.07813712706509)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Nepal\n",
+      "latitude and longitude for  Nepal is following\n",
+      "(28.1083929, 84.0917139)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Spain\n",
+      "latitude and longitude for  Spain is following\n",
+      "(39.3262345, -4.8380649)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Sri Lanka\n",
+      "latitude and longitude for  Sri Lanka is following\n",
+      "(7.5554942, 80.7137847)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of  Sweden\n",
+      "latitude and longitude for  Sweden is following\n",
+      "(59.6749712, 14.5208584)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Boston, MA US\n",
+      "latitude and longitude for Boston, MA US is following\n",
+      "(42.3602534, -71.0582912)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Los Angeles, CA US\n",
+      "latitude and longitude for Los Angeles, CA US is following\n",
+      "(34.0536909, -118.2427666)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Madison, WI US\n",
+      "latitude and longitude for Madison, WI US is following\n",
+      "(43.074761, -89.3837613)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Orange, CA US\n",
+      "latitude and longitude for Orange, CA US is following\n",
+      "(33.7500378, -117.8704931)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Seattle, WA US\n",
+      "latitude and longitude for Seattle, WA US is following\n",
+      "(47.6038321, -122.3300624)\n",
+      "adding latitude and longitude to new dataframe\n",
+      "finding geolocation of Tempe, AZ US\n",
+      "latitude and longitude for Tempe, AZ US is following\n",
+      "(33.4255056, -111.9400125)\n",
+      "adding latitude and longitude to new dataframe\n"
      ]
     }
    ],
    "source": [
     "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim()\n",
-    "location = geolocator.geocode(\"Hubei, China\")\n",
-    "print((location.latitude, location.longitude))\n",
     "\n",
-    "for i in j2df:\n",
-    "    print(i)"
+    "j2df_v2 = j2df\n",
+    "\n",
+    "for index in j2df.index:\n",
+    "    Country = j2df.iloc[index,1]\n",
+    "    State = j2df.iloc[index,4]\n",
+    "    \n",
+    "    # Avoid un-recognized geo-location format\n",
+    "    if State == Country:\n",
+    "        State = \"\"\n",
+    "    if Country == \"Mainland China\":\n",
+    "        Country = Country.split(\" \")[1]\n",
+    "\n",
+    "    place = State if len(State) != 0 else Country\n",
+    "    \n",
+    "    print(\"finding geolocation of %s %s\" % (State, Country))\n",
+    "    try:\n",
+    "        geolocator = Nominatim(user_agent=\"geoloc_nCoV\")\n",
+    "        location = geolocator.geocode(State+','+Country)\n",
+    "        print(\"latitude and longitude for %s %s is following\" % (State, Country))\n",
+    "        print((location.latitude, location.longitude))\n",
+    "        \n",
+    "    except:\n",
+    "        print(\"cannot understand input State/Country, please check your format\")\n",
+    "        break\n",
+    "    \n",
+    "    # add column for latitude and longitude\n",
+    "    print(\"adding latitude and longitude to new dataframe\")\n",
+    "    j2df_v2.loc[j2df_v2.index[index], 'latitude'] = location.latitude\n",
+    "    j2df_v2.loc[j2df_v2.index[index], 'longitude'] = location.longitude\n",
+    "    j2df_v2.loc[j2df_v2.index[index], 'location'] = place\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now time to map! Happy mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "import pandas as pd\n",
+    "    \n",
+    "# Make an empty map\n",
+    "m = folium.Map([20, 20], zoom_start=2)\n",
+    "\n",
+    "# I can add marker one by one on the map\n",
+    "for i in range(0,len(j2df_v2)):\n",
+    "    folium.Circle(\n",
+    "    location=[j2df_v2.iloc[i]['latitude'],j2df_v2.iloc[i]['longitude']],\n",
+    "    popup=j2df_v2.iloc[i]['location'],\n",
+    "    radius=float(j2df_v2.iloc[i]['Confirmed']*10),\n",
+    "    color='crimson',\n",
+    "    fill=True,\n",
+    "    fill_color='crimson'\n",
+    "   ).add_to(m)\n",
+    "\n",
+    "# Save it as html\n",
+    "m.save('2019-nCoV_map_JHUCSSEdata_02072020.html')\n"
    ]
   }
  ],
